Bug 207329 - Mandate UUID version 4 for mDNS ICE candidates
Summary: Mandate UUID version 4 for mDNS ICE candidates
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebRTC (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: youenn fablet
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-02-06 06:03 PST by youenn fablet
Modified: 2020-02-07 10:10 PST (History)
17 users (show)

See Also:


Attachments
Patch (7.24 KB, patch)
2020-02-06 06:09 PST, youenn fablet
no flags Details | Formatted Diff | Diff
Patch (7.26 KB, patch)
2020-02-06 06:46 PST, youenn fablet
no flags Details | Formatted Diff | Diff
Patch for landing (8.04 KB, patch)
2020-02-06 23:44 PST, youenn fablet
no flags Details | Formatted Diff | Diff
Fix according comments (1.87 KB, patch)
2020-02-07 06:28 PST, youenn fablet
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description youenn fablet 2020-02-06 06:03:49 PST
Mandate UUID version 4 for mDNS ICE candidates
Comment 1 Radar WebKit Bug Importer 2020-02-06 06:05:54 PST
<rdar://problem/59221606>
Comment 2 youenn fablet 2020-02-06 06:09:16 PST
Created attachment 389944 [details]
Patch
Comment 3 youenn fablet 2020-02-06 06:46:08 PST
Created attachment 389950 [details]
Patch
Comment 4 Eric Carlson 2020-02-06 06:47:04 PST
Comment on attachment 389950 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=389950&action=review

> Source/WebCore/Modules/mediastream/PeerConnectionBackend.cpp:306
>  static String extractIPAddres(const String& sdp)

s/extractIPAddres/extractIPAddress/
Comment 5 youenn fablet 2020-02-06 07:46:41 PST
(In reply to Eric Carlson from comment #4)
> Comment on attachment 389950 [details]
> Patch
> 
> View in context:
> https://bugs.webkit.org/attachment.cgi?id=389950&action=review
> 
> > Source/WebCore/Modules/mediastream/PeerConnectionBackend.cpp:306
> >  static String extractIPAddres(const String& sdp)
> 
> s/extractIPAddres/extractIPAddress/

Will fix it.
Comment 6 youenn fablet 2020-02-06 23:44:47 PST
Created attachment 390059 [details]
Patch for landing
Comment 7 WebKit Commit Bot 2020-02-07 02:42:03 PST
The commit-queue encountered the following flaky tests while processing attachment 390059 [details]:

editing/spelling/spellcheck-async-remove-frame.html bug 158401 (authors: morrita@google.com, rniwa@webkit.org, and tony@chromium.org)
The commit-queue is continuing to process your patch.
Comment 8 WebKit Commit Bot 2020-02-07 02:42:42 PST
Comment on attachment 390059 [details]
Patch for landing

Clearing flags on attachment: 390059

Committed r256016: <https://trac.webkit.org/changeset/256016>
Comment 9 WebKit Commit Bot 2020-02-07 02:42:44 PST
All reviewed patches have been landed.  Closing bug.
Comment 10 Darin Adler 2020-02-07 05:31:17 PST
Comment on attachment 390059 [details]
Patch for landing

View in context: https://bugs.webkit.org/attachment.cgi?id=390059&action=review

> Source/WTF/wtf/UUID.cpp:84
> +static inline bool isHexadecimalCharacter(UChar character)

Should use isASCIIHexDigit from <wtf/ASCIICType.h> rather than writing a new one.
Comment 11 youenn fablet 2020-02-07 06:28:08 PST
Reopening to attach new patch.
Comment 12 youenn fablet 2020-02-07 06:28:11 PST
Created attachment 390078 [details]
Fix according comments
Comment 13 WebKit Commit Bot 2020-02-07 10:09:33 PST
The commit-queue encountered the following flaky tests while processing attachment 390078 [details]:

editing/spelling/spellcheck-attribute.html bug 206178 (authors: g.czajkowski@samsung.com, mark.lam@apple.com, and rniwa@webkit.org)
The commit-queue is continuing to process your patch.
Comment 14 WebKit Commit Bot 2020-02-07 10:10:09 PST
Comment on attachment 390078 [details]
Fix according comments

Clearing flags on attachment: 390078

Committed r256030: <https://trac.webkit.org/changeset/256030>
Comment 15 WebKit Commit Bot 2020-02-07 10:10:11 PST
All reviewed patches have been landed.  Closing bug.